fix some white space issues

--- a/src/app/modules/nav-wrap/components/top-bar/top-bar.component.scss
+++ b/src/app/modules/nav-wrap/components/top-bar/top-bar.component.scss
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  padding: var(--space-xs) var(--space-med) var(--space-med) var(--space-med);
+  padding: var(--space-sml) var(--space-med) var(--space-med) var(--space-med);
   display: flex;
   justify-content: space-between;
   align-items: center;
