--- a/src/app/modules/pages/budget/bills/bills.component.scss
+++ b/src/app/modules/pages/budget/bills/bills.component.scss
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    padding-bottom: var(--space-xs);
+    margin-bottom: var(--space-xs);
 
     &--filter {
       flex: 1;
