--- a/src/app/modules/pages/budget/budget.component.scss
+++ b/src/app/modules/pages/budget/budget.component.scss
@@ -1,3 +1,7 @@
+app-budget-accts {
+  padding-bottom: var(--space-sml);
+}
+
 app-bills {
   padding: var(--space-med) 0;
   width: 100%;
